# game_translation

./: .gitignore  pyproject.toml  requirements.txt  settings.yaml.example
.kiro/specs/excel-translation-api/: design.md  requirements.md  tasks.md
src/excel_translator/: __init__.py  config.py
src/excel_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/excel_translator/app/: __init__.py
src/excel_translator/character/: __init__.py
src/excel_translator/chunk/: __init__.py
src/excel_translator/cost/: __init__.py
src/excel_translator/glossary/: __init__.py
src/excel_translator/parser/: __init__.py
src/excel_translator/prompt/: __init__.py
src/excel_translator/qa/: __init__.py
src/excel_translator/review/: __init__.py
src/excel_translator/translation/: __init__.py
src/excel_translator/writer/: __init__.py
tests/: __init__.py  test_character.py  test_chunk.py  test_config.py  test_cost.py  test_glossary.py  test_parser.py  test_prompt.py  test_qa.py  test_review.py  test_translation.py  test_writer.py
